name:                vacivity
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              olive
maintainer:          olivine.dogue@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable vacivity
  main-is:             Main.hs
  default-extensions:  GADTs
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , NoMonomorphismRestriction
                     , PatternSynonyms
                     , RankNTypes
                     , ScopedTypeVariables
                     , FlexibleContexts
                     , TupleSections
                     , DataKinds
                     , KindSignatures
                     , NullaryTypeClasses
                     , TypeOperators
                     , MultiWayIf
                     , BangPatterns
                     , ViewPatterns
  build-depends:       base >=4.7 && <4.8
                     , antiqua-prime
                     , MonadRandom
                     , GLFW-b
                     , containers
                     , parallel
                     , array
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
